# SwTor-1.3

./: LICENSE  README.md
server/: Server.sln
server/PluginNet/: AssemblyInfo.cpp  NetBinder.cpp  NetBinder.h  NetBinder.vcxproj  NetBinder.vcxproj.filters
server/ProxyServer/: CMakeLists.txt  Makefile  ProxyServer.vcxproj  ProxyServer.vcxproj.filters
server/ProxyServer/Src/: Swtor.cpp  targetver.h
server/ProxyServer/Src/DAO/: Account.h
server/ProxyServer/Src/Entity/: Account.h
server/ProxyServer/Src/Logic/: Session.cpp  Session.h  World.cpp  World.h
server/ProxyServer/Src/Logic/Handlers/: Authentication.cpp
server/Script/: CMakeLists.txt  Script.vcxproj  Script.vcxproj.filters
server/Script/Src/: dllmain.cpp  stdafx.cpp  stdafx.h
server/Script/Src/Game/: IWorld.cpp  IWorld.h
server/Script/Src/Network/: IServer.h
server/Script/Src/Script/: IPluginManager.cpp  IPluginManager.h  Plugin.h
server/Script/Src/Shared/: omp_mutex.h
server/Script/Src/System/: ILog.cpp  ILog.h  ScriptLog.cpp
server/TimeServer/: CMakeLists.txt  Makefile  TimeServer.vcxproj  TimeServer.vcxproj.filters
server/TimeServer/Src/: Swtor.cpp
server/TimeServer/Src/Logic/: Session.cpp  Session.h  World.cpp  World.h
server/TimeServer/Src/Logic/Handlers/: Authentication.cpp
server/WorldServer/: CMakeLists.txt  Makefile  WorldServer.vcxproj  WorldServer.vcxproj.filters
server/WorldServer/Src/: Swtor.cpp  stdafx.cpp
server/WorldServer/Src/DAO/: Account.h  Character.h
server/WorldServer/Src/Game/: Character.cpp  Character.h  Inventory.h  World.cpp  World.h
server/WorldServer/Src/Game/Data/: CharacterSpecs.h  Region.h
server/WorldServer/Src/Game/Service/: CharacterService.h
server/WorldServer/Src/Logic/: Account.h  Session.cpp  Session.h  World.cpp  World.h
server/WorldServer/Src/Logic/Handlers/: Authentication.cpp  Character.cpp  Chat.cpp  General.cpp  Service.cpp
server/WorldServer/Src/Logic/Senders/: Character.cpp  Chat.cpp  Client.cpp  General.cpp  Options.cpp  Service.cpp
server/WorldServer/Src/Script/: PluginManager.cpp  PluginManager.h
